# pipe_viper

./: LISCENSE  __init__.py  a.py  main.py  pyproject.toml  readme.md
pipe_viper/: __init__.py  docker.py  lx_stdio.py  main.py  powershell-core.py  pwsh.py  ssh.py  table.py
pipe_viper/async_functions/: __init__.py  pipe_stdin_async.py  run_cmd_file_async.py
pipe_viper/functions/: __init__.py  run_cmd_file.py
